QtcApi: The beginning
Change-Id: Id22910aca7a20fd8586ec09d0eea1d36ca83ada7

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -1,5 +1,6 @@
 # Level 0:
 add_subdirectory(coreplugin)
+add_subdirectory(qtcapi)
 
 # Level 1: (only depends of Level 0)
 add_subdirectory(texteditor)
