EmacsKeys: Move plugin class definition to .cpp
Plus a bit code cosmetics

Change-Id: I5ccc12deaf8cf7f944cfac2eec110691ace24540

--- a/src/plugins/emacskeys/CMakeLists.txt
+++ b/src/plugins/emacskeys/CMakeLists.txt
@@ -2,7 +2,7 @@ add_qtc_plugin(EmacsKeys
   PLUGIN_DEPENDS Core TextEditor
   SOURCES
     emacskeysconstants.h
-    emacskeysplugin.cpp emacskeysplugin.h
+    emacskeysplugin.cpp
     emacskeysstate.cpp emacskeysstate.h
     emacskeystr.h
 )
