Fix Axivion::Internal::Dto::concat overloads
MinGW1120_64 compatibility with C++20 on.

Change-Id: I3d598c11e2b2afcddda2b298cbe4d4a21facb32b

--- a/src/plugins/axivion/CMakeLists.txt
+++ b/src/plugins/axivion/CMakeLists.txt
@@ -12,7 +12,7 @@ add_qtc_plugin(Axivion
     axivionsettings.cpp axivionsettings.h
     axiviontr.h
     dashboard/dto.cpp dashboard/dto.h
-    dashboard/concat.cpp dashboard/concat.h
+    dashboard/concat.h
     dashboard/dashboardclient.cpp dashboard/dashboardclient.h
     dashboard/error.h dashboard/error.cpp
 )
