AppManPlugin: Add miniyaml as a 3rdParty to make parsing yaml files easier
It's a copy of 3rdParty used by QtApplicationManager directly and also
includes a copy of the ApplicationInfo and PackagInfo classes.

Change-Id: I6ee60a36899862dd09811cdc68460602bbd2c530

--- a/src/plugins/qtapplicationmanager/CMakeLists.txt
+++ b/src/plugins/qtapplicationmanager/CMakeLists.txt
@@ -1,10 +1,12 @@
 find_package(Qt6 COMPONENTS Widgets REQUIRED)
 
+add_subdirectory(3rdparty/miniyaml)
+
 add_qtc_plugin(QtApplicationManagerIntegration
   PLUGIN_DEPENDS
     Core Debugger ProjectExplorer QmakeProjectManager
     QtSupport RemoteLinux
-  DEPENDS Qt::Network Qt::Widgets ExtensionSystem Utils
+  DEPENDS Qt::Network Qt::Widgets ExtensionSystem Utils miniyaml
   SOURCES
     appmanagerconstants.h
     appmanagercreatepackagestep.cpp appmanagercreatepackagestep.h
