qtcc: link and load qtcreator plugins
Change-Id: Ib055a69259cd5a6dce5e74eb77c19185cf12802c

--- a/src/tools/qtcc/CMakeLists.txt
+++ b/src/tools/qtcc/CMakeLists.txt
@@ -7,5 +7,10 @@ endif()
 
 add_executable(qtcc main.cpp)
 target_include_directories(qtcc PRIVATE ${CURSES_INCLUDE_DIR})
-target_link_libraries(qtcc PRIVATE ${CURSES_LIBRARIES})
-
+target_link_libraries(qtcc PRIVATE ${CURSES_LIBRARIES} ExtensionSystem Core Qt6::Widgets ProjectExplorer CMakeProjectManager)
+target_include_directories(qtcc PRIVATE
+    ${CMAKE_SOURCE_DIR}/src/plugins
+    ${CMAKE_SOURCE_DIR}/src/libs
+)
+target_compile_definitions(qtcc PRIVATE PLUGINS_DIR=\"${CMAKE_BINARY_DIR}/lib/qtcreator/plugins\")
+set_target_properties(qtcc PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
