qtcc: list project files using ncurses
Change-Id: I3acafba838e36912bc7adba1a89306390142b787

--- a/src/tools/qtcc/test-project/CMakeLists.txt
+++ b/src/tools/qtcc/test-project/CMakeLists.txt
@@ -1,6 +1,7 @@
-cmake_minimum_required(VERSION 3.13)
-
-project(qtcc-test)
+cmake_minimum_required(VERSION 3.12)
 
 
-add_executable(qtcc-test main.cpp)
+project(test-qtcc)
+
+
+add_executable(test-qtcc main.cpp)
