Lua: Add Layout & Aspect bindings
Change-Id: Idae72e797739db92668594b4dfb20b3af33587a6

--- a/src/plugins/lua/CMakeLists.txt
+++ b/src/plugins/lua/CMakeLists.txt
@@ -7,14 +7,17 @@ add_qtc_plugin(Lua
   SOURCES
     luaapiregistry.cpp
     luaapiregistry.h
+    luaaspectbindings.cpp
     luaengine.cpp
     luaengine.h
+    lualayoutingbindings.cpp
     luaplugin.cpp
     luapluginloader.cpp
     luapluginloader.h
     luapluginspec.cpp
     luapluginspec.h
     luatr.h
+    luauibindings.cpp
     sol/config.hpp
     sol/forward.hpp
     sol/sol.hpp
