--- a/src/libs/3rdparty/CMakeLists.txt
+++ b/src/libs/3rdparty/CMakeLists.txt
@@ -4,6 +4,8 @@ add_subdirectory(libvterm)
 add_subdirectory(libptyqt)
 add_subdirectory(qrcodegen)
 add_subdirectory(qtkeychain)
+add_subdirectory(lua-5.4.6)
+add_subdirectory(sol2)
 
 if(WIN32)
     add_subdirectory(winpty)
