Lua: Add luatemplates
Change-Id: Icc9e7505156eb8749da64e1f4022f27a57018a67

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -118,3 +118,5 @@ endif()
 add_subdirectory(qnx)
 add_subdirectory(mcusupport)
 add_subdirectory(qtapplicationmanager)
+
+add_subdirectory(luatemplates)
