--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -119,4 +119,5 @@ add_subdirectory(qnx)
 add_subdirectory(mcusupport)
 add_subdirectory(qtapplicationmanager)
 
+add_subdirectory(luatests)
 add_subdirectory(luatemplates)
