--- a/webhooks.config
+++ b/webhooks.config
@@ -1,3 +1,14 @@
+[remote "qt-cherry-pick-bot"]
+  url = https://qt-cherry-pick-bot.herokuapp.com/gerrit-events
+  maxTries = 10
+  event = patchset-created
+  event = change-merged
+  event = change-abandoned
+  event = change-staged
+  event = change-unstaged
+  event = comment-added
+  event = change-integration-pass
+  event = change-integration-fail
 [remote "Gitlab-Github-Proxy"]
   url = https://qt-gerrit-ci-integrator.herokuapp.com/gerrit-events
   maxTries = 10
