ExtensionSystem: Add PluginSpec::wantsToFetch
Change-Id: I867d6cd1412537bba8f122bce7e71356dce20810

--- a/src/plugins/compilerexplorer/CompilerExplorer.json.in
+++ b/src/plugins/compilerexplorer/CompilerExplorer.json.in
@@ -27,5 +27,6 @@
         "    </mime-type>",
         "</mime-info>"
     ],
+    "WantsToFetch" : true,
     "JsonWizardPaths" : [":/compilerexplorer/wizard/"]
 }
