Modify access rules

--- a/project.config
+++ b/project.config
@@ -24,3 +24,5 @@
 	exclusiveGroupPermissions = push
 [access "refs/for/refs/heads/3.4"]
 	exclusiveGroupPermissions = push
+[access "refs/heads/master"]
+	submit = group Administrators
